Bug 385027 - Switch builds to Maven/Tycho, update GUI tests